# todopython

./: .dockerignore  .env.example  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
templates/: index.html
todos/: admin.py  models.py  presenters.py  schemas.py  serializers.py  services.py  urls.py  validation.py  views.py
todos/migrations/: 0001_initial.py  0002_todo_user.py  0003_alter_todo_user.py  0004_category_label_task_comment_tasklabel_task_labels_and_more.py  0005_alter_task_priority_alter_task_status.py
