[project]
name = "todopol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==5.2",
    "djangorestframework",
    "markdown",
    "django-filter",
    "djangorestframework-simplejwt",
    "drf-spectacular",
    "pydantic",
    "psycopg2-binary"
]
